Fix scrollbar of filter on iPhone

--- a/css/main.css
+++ b/css/main.css
@@ -384,7 +384,7 @@ html {
   body .filters,
   html .filters {
     width: 100%;
-    height: 30px;
+    height: 35px;
     margin: 20px auto;
     padding: 0;
     overflow-x: auto;
